--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
+    script(type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js")
+    script(type="text/javascript" src="/javascripts/editable.js")
     link(rel='stylesheet', href='/stylesheets/style.css')
     
   body
